--- a/src/main/resources/templates/WebQuanLy/customer-login.html
+++ b/src/main/resources/templates/WebQuanLy/customer-login.html
@@ -527,7 +527,7 @@
                 <div class="footer-links">
                     <a href="/customers/auth/forgot-password">Quên mật khẩu?</a>
                     <span class="separator">|</span>
-                    <a href="#">Đăng ký ngay</a>
+                    <a href="/customers/register">Đăng ký ngay</a>
                 </div>
             </form>
 
