--- a/src/main/resources/templates/WebQuanLy/list-nhan-vien.html
+++ b/src/main/resources/templates/WebQuanLy/list-nhan-vien.html
@@ -846,12 +846,12 @@
                                     th:disabled="${!isAdmin}">
                                 <i class="fa-solid fa-edit"></i>
                             </button>
-                            <button type="button" class="btn btn-danger btn-sm btn-action"
-                                    data-bs-toggle="modal"
-                                    th:data-bs-target="'#deleteEmployeeModal' + ${employee.id}"
-                                    th:disabled="${!isAdmin}">
-                                <i class="fa-solid fa-trash"></i>
-                            </button>
+<!--                            <button type="button" class="btn btn-danger btn-sm btn-action"-->
+<!--                                    data-bs-toggle="modal"-->
+<!--                                    th:data-bs-target="'#deleteEmployeeModal' + ${employee.id}"-->
+<!--                                    th:disabled="${!isAdmin}">-->
+<!--                                <i class="fa-solid fa-trash"></i>-->
+<!--                            </button>-->
                         </td>
                     </tr>
                     </tbody>
