--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="vi" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<head>
+    <meta charset="UTF-8">
+    <title>Sidebar</title>
+</head>
+<body>
 <div th:fragment="sidebar" class="sidebar d-flex flex-column p-3 bg-white text-black" id="sidebar">
     <div class="sidebar-header d-flex align-items-center gap-3 px-2 mb-4">
         <img th:src="@{/image/acv-logo3.png}" alt="ACV Logo" style="width: 45px; height: 45px;">
@@ -160,6 +168,36 @@
                     <span class="nav-text">Nhân sự</span>
                 </a>
             </li>
+
+            <!-- Ví điện tử ACV - ONLY for ADMIN -->
+            <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                <a class="nav-link text-black d-flex justify-content-between align-items-center collapsed" data-bs-toggle="collapse" href="#viSubmenu" role="button" aria-expanded="false" aria-controls="viSubmenu">
+        <span class="d-flex align-items-center">
+            <i class="fa-solid fa-wallet"></i>
+            <span class="nav-text">Ví điện tử ACV</span>
+        </span>
+                    <i class="fa-solid fa-chevron-down toggle-icon"></i>
+                </a>
+                <div class="collapse" id="viSubmenu">
+                    <ul class="nav flex-column ms-3">
+                        <li class="nav-item">
+                            <a th:href="@{/acvstore/vi/tong-hop}" class="nav-link text-black">
+                                <i class="fa-solid fa-layer-group"></i>
+                                <span class="nav-text">Tổng hợp ví</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a th:href="@{/acvstore/vi/yeu-cau-rut-tien}" class="nav-link text-black">
+                                <i class="fa-solid fa-money-bill-transfer"></i>
+                                <span class="nav-text">Yêu cầu rút tiền</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+
         </ul>
     </div>
 </div>
+</body>
+</html>
